# tmux-quick-tabs

./: .MASTER-PLAN.txt  .gitignore  .pre-commit-config.yaml  .shellcheckrc  AGENTS.md  README.md  close-tab.sh  new-tab.sh  next-tab.sh  pyproject.toml  pytest.ini  qt-binds.tmux  reset-buffer.sh  tab-binds.tmux
.github/issues/: provide-source-pane-when-swapping.md
botfiles/: git_history.md  project_overview.md  prompts.md  refactor_plan.md  refactor_requirements.md
scripts/: choose-tab.sh  close-tab.sh  create-tab.sh  kill-pane.sh  kill-tab-group.sh  new-tab.sh  new-window.sh  next-tab.sh  reset-buffer.sh
src/tmux_quick_tabs/: __init__.py  __main__.py  choose_tab.py  close_tab.py  dependencies.py  new_tab.py  new_window.py  next_tab.py  tab_groups.py
tests/: __init__.py  conftest.py  test_choose_tab.py  test_cli_entrypoints.py  test_close_tab.py  test_new_tab.py  test_new_window.py  test_next_tab.py  test_tab_groups.py  test_tmux_bindings.py
